# FlashCache-Simulator

./: .clang-format  .gitignore  .gitmodules
run-scripts/: command  genConfigs.py  kangaroo-memSize5MB-flashSize20MB-setCapacity4096B-rripMixedPromotion-rripBits3-logPer5-flushSize256-randomAdmissionPreLog0.9-threshold2-readmit1-zipf0.9.cfg  kangaroo-memSize5MB-flashSize28MB-setCapacity4096B-rripMixedPromotion-rripBits3-logPer5-flushSize256-randomAdmissionPreLog0.9-threshold2-readmit1-zipf0.9.cfg  kangaroo-memSize5MB-flashSize32MB-setCapacity4096B-logPer5-qlogCompactionThrehold16-randomAdmissionPreLog0.9-zipf0.9.cfg  kangaroo-memSize5MB-flashSize32MB-setCapacity4096B-rripMixedPromotion-rripBits3-logPer5-flushSize256-randomAdmissionPreLog0.9-threshold2-readmit1-zipf0.9.cfg
simulator/: CMakeLists.txt  build.sh  config.hpp  constants.hpp  cuckoo_sets.cpp  cuckoo_sets.hpp  q_log.cpp  q_log.hpp  rotating_log.cpp  s3fifo.hpp  s3lru.hpp  s_log.cpp  s_log.hpp
simulator/caches/: cache.cpp  mem_log_sets_cache.cpp  zone_cache.cpp  zone_cache.hpp
simulator/lib/: zipf.h
simulator/parsers/: zipf_parser.hpp
simulator/test/: test_CuckooHash.cpp  test_QuotientFilter.cc  test_QuotientIndex.cpp
simulator/utils/: CuckooHashBucket.h  CuckooHashConfig.h  CuckooHashMap.cpp  CuckooHashMap.h  QuotientFilter.cpp  QuotientFilter.h  QuotientFilterEntry.h  QuotientIndex.cpp  QuotientIndex.h  QuotientIndexArray.cpp  QuotientIndexArray.h  QuotientIndexEntry.h  SegmentIndex.cpp  SegmentIndex.h  SegmentIndexArray.cpp  SegmentIndexArray.h
